--- a/11_Webscrapping_Intro/package.json
+++ b/11_Webscrapping_Intro/package.json
@@ -1,7 +1,6 @@
 {
   "name": "11_Webscrapping_Intro",
   "version": "1.0.0",
-  "description": "",
   "main": "async.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.1",
-    "cheerio": "^1.0.0-rc.10",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.12",
     "request": "^2.88.2"
-  }
+  },
+  "description": ""
 }
